<resources>
    <!-- Recipes main screen -->
    <string name="your_recipes" translation_description="Text shown on top of the recipes main screen">Recipes</string>
    <string name="add_recipe" translation_description="Content description for the add recipe button">New recipe</string>
    <string name="sort_title" translation_description="The text shown when sorting by title">Title</string>
    <string name="sort_date" translation_description="The text shown when sorting by date">Date</string>
    <string name="sort" translation_description="Content description for the sort button">Sort</string>
    <string name="sort_descending" translation_description="The text shown when sorting in descending order">Descending</string>
    <string name="sort_ascending" translation_description="The text shown when sorting in ascending order">Ascending</string>
    <string name="sync_enabled" translation_description="The text shown when sync is enabled">Synchronisation with the backend is enabled</string>
    <string name="sync_disabled" translation_description="The text shown when sync is disabled">Synchronisation with the backend is disabled</string>
    <string name="sync_loading" translation_description="The text shown when sync status is being loaded">Synchronising with the backend</string>

    <!-- Login screen -->
    <string name="server_hint" translation_description="The placeholder text shown when the server in the login screen is empty">Server URL, e.g. https://myserver.com:8019</string>
    <string name="username_hint" translation_description="The placeholder text shown when the username in the login screen is empty">Username</string>
    <string name="password_hint" translation_description="The placeholder text shown when the password in the login screen is empty">Password</string>
...
