...
        floatingActionButton = {
            if (!isLoggedIn) {
                AnimatedLoadingButton(
                    onClick = { eventHandler(LoginEvent.Login) },
                    isLoading = buttonLoading,
                    defaultIcon = Icons.Default.Done,
                    contentDescriptionText = "Login"
                )
            }
        },
        modifier = modifier
    ) { innerPadding ->
        LoginFormFields(
...
