...
    <string name="recipe_not_synced" translation_description="The text shown when a recipe is not synced">Recipe not synced to server</string>
    <string name="recipe_syncing" translation_description="The text shown when a recipe is being synced">Recipe is being synced</string>
    <string name="recipe_synced" translation_description="The text shown when a recipe is synced">Recipe synced to server</string>
    <string name="recipe_sync_error" translation_description="The text shown when a recipe sync failed">Recipe sync failed</string>
    
    <!-- Accessibility strings -->
    <string name="sort_by_heading" translation_description="Heading for sort options">Sort By</string>
    <string name="sort_order_heading" translation_description="Heading for sort order options">Order</string>
    <string name="selected_option" translation_description="State description for selected radio button">Selected</string>
    <string name="not_selected_option" translation_description="State description for unselected radio button">Not selected</string>

    <!-- Login screen -->
    <string name="server_hint" translation_description="The placeholder text shown when the server in the login screen is empty">Server URL, e.g. https://myserver.com:8019</string>
...
